target/infra/argocd-ingress/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: '4'
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`argocd.dev.kronkltd.net`)
    priority: 10
    services:
    - name: argocd-server
      port: 80
  - kind: Rule
    match: Host(`argocd.dev.kronkltd.net`) && Headers(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
  tls:
    certResolver: default
